# visualization.waveform

./: .travis.yml  AddonVersion.cmake  CMakeLists.txt  FindOpenGLES.cmake  Jenkinsfile  Makefile.am  README.md  appveyor.yml  azure-pipelines.yml  configure.in
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
addon/: addon.xml
debian/: changelog  changelog.in  control  copyright  kodi-visualization-waveform.install  rules
src/: DefaultPixelShader.hlsl  DefaultVertexShader.hlsl  Main.cpp  Main_dx.cpp  Main_gl.cpp  Main_gles.cpp  Makefile.am  VisMatrixGLES.cpp
tools/buildsteps/win32/: make-addon.bat
visualization.waveform/: addon.xml  addon.xml.in
visualization.waveform/resources/: settings.xml
visualization.waveform/resources/language/resource.language.af_za/: strings.po
visualization.waveform/resources/language/resource.language.am_et/: strings.po
visualization.waveform/resources/language/resource.language.ar_sa/: strings.po
visualization.waveform/resources/language/resource.language.az_az/: strings.po
visualization.waveform/resources/language/resource.language.be_by/: strings.po
visualization.waveform/resources/language/resource.language.bg_bg/: strings.po
visualization.waveform/resources/language/resource.language.bs_ba/: strings.po
visualization.waveform/resources/language/resource.language.ca_es/: strings.po
visualization.waveform/resources/language/resource.language.cs_cz/: strings.po
visualization.waveform/resources/language/resource.language.cy_gb/: strings.po
visualization.waveform/resources/language/resource.language.da_dk/: strings.po
visualization.waveform/resources/language/resource.language.de_de/: strings.po
visualization.waveform/resources/language/resource.language.el_gr/: strings.po
visualization.waveform/resources/language/resource.language.en_au/: strings.po
visualization.waveform/resources/language/resource.language.en_gb/: strings.po
visualization.waveform/resources/language/resource.language.en_nz/: strings.po
visualization.waveform/resources/language/resource.language.en_us/: strings.po
visualization.waveform/resources/language/resource.language.eo/: strings.po
visualization.waveform/resources/language/resource.language.es_ar/: strings.po
visualization.waveform/resources/language/resource.language.es_es/: strings.po
visualization.waveform/resources/language/resource.language.es_mx/: strings.po
visualization.waveform/resources/language/resource.language.et_ee/: strings.po
visualization.waveform/resources/language/resource.language.eu_es/: strings.po
visualization.waveform/resources/language/resource.language.fa_af/: strings.po
visualization.waveform/resources/language/resource.language.fa_ir/: strings.po
visualization.waveform/resources/language/resource.language.fi_fi/: strings.po
visualization.waveform/resources/language/resource.language.fo_fo/: strings.po
visualization.waveform/resources/language/resource.language.fr_ca/: strings.po
visualization.waveform/resources/language/resource.language.fr_fr/: strings.po
visualization.waveform/resources/language/resource.language.gl_es/: strings.po
visualization.waveform/resources/language/resource.language.he_il/: strings.po
visualization.waveform/resources/language/resource.language.hi_in/: strings.po
visualization.waveform/resources/language/resource.language.hr_hr/: strings.po
visualization.waveform/resources/language/resource.language.hu_hu/: strings.po
visualization.waveform/resources/language/resource.language.id_id/: strings.po
visualization.waveform/resources/language/resource.language.is_is/: strings.po
visualization.waveform/resources/language/resource.language.it_it/: strings.po
visualization.waveform/resources/language/resource.language.ja_jp/: strings.po
visualization.waveform/resources/language/resource.language.ko_kr/: strings.po
(+30 files in other folders)
